Feat: Support JDK17 ZGC Cycles and ZGC Pauses